added message to README

--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
 <body>
 	<h1>Lab 13, Part 1 Review</h1>
 	<h2>Home</h2>
-	<p><a href="http://Home">Home</a></p>
-	<ul> <li><span class= "active"> </span> </li>
-		<p>Welcome to lab 13!!!! Our last lab!</p></ul>>
+	<p><a href="file:///Users/flyerden/blivingston/lab-13-remote/home.html">Home</a></p>
+	<ol> <li><span class= "active"> </span> 
+		<p>Welcome to lab 13!!!! Our last lab!</li></p></ol>>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgd9N0VRk01A-MSFSd7gpaZ7eHWt_-6UQjEcTcR5TLMMbp9UUlQw">
 </body>
 </html>
