--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Lab 13 About</title></head>
+<head>
+	<title>Lab 13 About</title>
+		<link rel="stylesheet" href="mystyles.css">
+</head>
 <body>
 	<h1>Lab 13, Part 1 Review</h1>
 	<h2>About</h2>
