--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>lab 13 Home</title>
+	<link rel="stylesheet" href="mystyles.css">
 </head>
 <body>
 	<h1>Lab 13, Part 1 Review</h1>
