--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     	<li><a href="http://unicodesnowmanforyou.com/">snowman</a></li>		
     	<li><a href="about"></a></li>
     	<li><a href="practice"></a></li>
+    	<h1>HTML Ipsum Presents</h1>
+
+<p><strong>Who needs love?</strong> an Octocat does <em>The biggest DJ hugs ever!</em> This cat really knows how to party!<code>No dragons allowed</code>, Mostly because its a team and one is a snowman. Bring a coat cause this is going to be cool!</p>
+
+<h2>Snowy Octo</h2>
+
+<ol>
+   <li>Dare to care</li>
+   <li>for a cat and a snowman duet</li>
+</ol>
+
+<blockquote><p>Come home to an octocat snowman</p></blockquote>
+
+<h3>Octo Snow</h3>
+
+<ul>
+   <li> A nice furry cat that rocks crazy beats</li>
+   <li>No salt allowed!!!!! Not even Tears of Joy!!!</li>
+</ul>
     </ol>
 </body>
 </html>
