added message to README file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     	<li><a href="http://unicodesnowmanforyou.com/">snowman</a></li>		
     	<li><a href="about"></a></li>
     	<li><a href="practice"></a></li>
-    	<h1>From the makers of lab 1 - 12</h1>
+    	<h1>The makers of lab 1 - 12</h1>
 
 <p><strong>Who needs love?</strong> an Octocat does <em>The biggest DJ hugs ever!</em> This cat really knows how to party!<code>No dragons allowed</code>, Mostly because its a team and one is a snowman. Bring a coat cause this is going to be cool!</p>
 
